--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <title>Lab 1 - Programação para Web - Daniel Ferreira </title>
 </head>
 <body>
-    <h1>Simulação de Páginas Web Inicias</h1>
+    <h1>Simulação de Páginas Web Iniciais</h1>
     <p>Nesta página temos os links que apontam para as respostas das questões do miniteste.</p>
+    <ul>
+        <li>
+            <a href="resposta1.txt"> Resposta 1</a>
+        </li>
+    </ul>
     
 </body>
 </html>
