Corrige o formato da resposta 2 de HTML para TXT e adiciona o link dela no index

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <li>
             <a href="resposta1.txt"> Resposta 1</a>
         </li>
+        <li>
+            <a href="resposta2.txt"> Resposta 2</a>
+        </li>
     </ul>
     
 </body>
