--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <li>
             <a href="resposta2.txt"> Resposta 2</a>
         </li>
+        <li>
+            <a href="resposta3.txt"> Resposta 3</a>
+        </li>
     </ul>
     
 </body>
