--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <li>
             <a href="resposta3.txt"> Resposta 3</a>
         </li>
+        <li>
+            <a href="resposta4.txt"> Resposta 4</a>
+        </li>
     </ul>
     
 </body>
