--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <li>
             <a href="resposta4.txt"> Resposta 4</a>
         </li>
+        <li>
+            <a href="resposta5.txt"> Resposta 5</a>
+        </li>
     </ul>
     
 </body>
